2003-07-15  Markus Germeier  <mager@tzi.de>
	* libmpio/src/directory.c (mpio_dentry_get_real): 
	  follow up fix for the broken internal FAT fix
	  added FTYPE_BROKEN
	* libmpio/src/directory.c (mpio_directory_make): 
	  another follow up fix for the broken internal FAT fix
	
2003-07-14  Markus Germeier  <mager@tzi.de>
	* libmpio/src/directory.c (mpio_dentry_get_startcluster): 
	  fixed a bug Yury stumbled across

2003-07-07  Markus Germeier  <mager@tzi.de>
	* libmpio/src/directory.c (mpio_dentry_filename_write): 
	  fixed one of my "famous" 8.3 filename handling "fixes" :-(

2003-07-01  Markus Germeier  <mager@tzi.de>
	* mpiosh/callback.c(mpiosh_ftyp2ascii): added function
	* mpiosh/callback.c(mpiosh_cmd_dir): 
	* libmpio/src/directory.c (mpio_dentry_get_real): 
	  return/display file type/tag for files from internal memory
	  (as requested by Markus)

2003-06-27  Andreas Buesching  <crunchy@tzi.de>

	* mpiosh/callback.c (mpiosh_cmd_backup): using the resolved backup
	directory name as argument for mpio_file_get_as
	(mpiosh_cmd_restore): same as above s/get/put/

	* mpiosh/config.c (mpiosh_config_check_backup_dir): changed return
	type to char *. returning the resolved backip directory name

2003-06-27  Andreas Buesching  <crunchy@tzi.de>

	* mpiosh/global.c: add CONFIG_BACKUP defining a user backup
	directory.
	(commands): add backup and restore command

	* libmpio/src/mpio.c (mpio_file_get_real): fix a bug. Unlink the
	external file (not the internal) before writing it (is it really
	necessary?).

	* mpiosh/callback.c (mpiosh_cmd_config): deactivated.
	(mpiosh_cmd_backup): new function, which creates a backup of all
	existing config files.
	(mpiosh_cmd_restore): new function, which restores a backup.

	* mpiosh/config.c (mpiosh_config_check_backup_dir): new function
	to check for the backup directory ~/.mpio/backup/. Optionally it
	can be created.

2003-06-26  Markus Germeier  <mager@tzi.de>
	* libmpio/src/mpio.c (mpio_file_exists): 
	  added helper function